Azure workshop application

--- a/application/RedisWorkshop/appsettings.json
+++ b/application/RedisWorkshop/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SqlConnection": "Server=tcp:wapp-azure-workshop.database.windows.net,1433;Initial Catalog=AirBNB;Persist Security Info=False;User ID=wout;Password=Workshop1!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "RedisConnection": "wapp-azure-workshop.redis.cache.windows.net:6380,password=NGQz7EiJoWiDtRJoEbv4oscNC4NmU7GpMYiIPwE+dkw=,ssl=True,abortConnect=False"
+  }
 }
